webAO/styles/client.css
@keyframes error_blink {
	0% {
		color: #fff;
	}

	50% {
		color: red;
	}

	100% {
		color: #fff;
	}
}

.text_rainbow {
	background-color: #fff;
	background-image: repeating-linear-gradient(to right,
			red 0% 8%, orange 8% 16%, yellow 16% 24%, green 24% 32%, blue 32% 40%,
			red 40% 48%, orange 48% 56%, yellow 56% 64%, green 64% 72%, blue 72% 80%,
			red 80% 88%, orange 88% 96%, yellow 96% 100%);
	background-size: 40% 40%;
	background-clip: text;
	-webkit-background-clip: text;
	-webkit-text-fill-color: transparent;
	animation: rainbow 4s linear infinite;
}

@keyframes rainbow_alt {

	0%,
	100% {
		background-position: 0 0;
	}

	50% {
		background-position: 400% 0;
	}
}

@keyframes rainbow {
	0% {
		background-position: 0 0;
	}

	100% {
		background-position: 400% 0;
	}
}

#client_error {
	position: absolute;
	display: flex;
	flex-direction: column;
	padding: 10px;
	top: 50%;
	left: 50%;
	margin-right: -50%;
	transform: translate(-50%, -50%);
	justify-content: center;
	align-items: center;
	background: #a00;
	color: #fff;
	font-size: large;
	animation: error_blink 3s ease-in-out infinite;
	z-index: 100;
}

#client_loading {
	display: block;
	flex-direction: column;
	position: fixed;
  	top: 30vh;
  	left: 30vw;
	width: 40vw;
	justify-content: center;
	text-align: center;
	align-items: center;
	background: black;
	color: lightgreen;
	font-size: large;
	z-index: 100;
}

#client_loadingtext {
	margin: 30px;
}

.demothing {
	display: inline-block;
	height: 60px;
	width: 60px;
	max-width: 60px;
	max-height: 60px;
	margin: 3px;
	border: 1px solid #000;
	vertical-align: top;
}

.noini {
	transform: rotate(180deg);
}

#client_charselect {
	display: none;
	position: fixed;
  	top: 5vh;
  	left: 10vw;
	width: 80vw;
	max-height: 90vh;
	overflow-y: scroll;
	text-align: center;
	margin: 0 auto;
	background: #444;
	z-index: 50;
}

#client_icwrapper {
	overflow-x: hidden;
	overflow-y: auto;
	height: 100%;
}

#client_iccontrols {
	overflow-y:auto;
}


@keyframes shake {

	0%,
	100% {
		left: 0;
	}

	20% {
		left: -10%;
	}

	40% {
		left: +10%;
	}

	60% {
		left: -10%;
	}

	80% {
		left: +10%;
	}
}

@keyframes flash {

	0%,
	100% {
		background-color: transparent;
	}

	50% {
		background-color: white;
	}
}

#client_background {
	position: relative;
	padding-bottom: 75%;
	background-color: transparent;
	top: 0;
	left: 0;
}

#client_gamewindow {
	width: 100%;
}

#client_court {
	position: absolute;
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	object-fit: cover;
}

#client_pair_char {
	position: absolute;
	height: 100%;
	width: 100%;
	bottom: 0;
}

#client_pair_char>img {
	position: absolute;
	height: 100%;
	width: 100%;
	bottom: 0;
	left: 0;
	object-fit: cover;
	object-position: 50% 0;
}

#client_char {
	position: absolute;
	height: 100%;
	width: 100%;
	bottom: 0;
	left: 0;
}

#client_char>img {
	position: absolute;
	height: 100%;
	width: 100%;
	bottom: 0;
	left: 0;
	object-fit: cover;
	object-position: 50% 0;
}

.def_bench, .hld_bench, .jur_bench, .sea_bench {
	left: 0;
}

.pro_bench, .hlp_bench, .wit_bench, .jud_bench {
	right: 0;
}

#client_bench {
	position: absolute;
	height: auto;
	width: 100%;
	bottom: 0;
}

#client_fg {
	position: absolute;
	height: 100%;
	width: 100%;
	bottom: 0;
	left: 0;
}

#client_evi {
	opacity: 0;
	position: absolute;
	background-repeat: no-repeat;
	background-size: contain;
	height: 0%;
	width: auto;
	top: 1em;
	transition: 0.25s linear;
	transition-property: height, opacity;
}

#client_testimony {
	display: block;
	position: absolute;
	height: 100%;
	width: auto;
}

@keyframes bubble {

	0% {
		left: 0;
		top: 0;
	}

	10% {
		left: 0;
		top: 0;
	}

	20% {
		left: -1%;
		top: 0;
	}

	30% {
		left: 1%;
		top: 1%;
	}

	40% {
		left: -1%;
		top: -1%;
	}

	50% {
		left: 1%;
		top: 0;
	}

	60% {
		left: -1%;
		top: -1%;
	}

	70% {
		left: 1%;
		top: 0;
	}

	80% {
		left: -1%;
		top: 1%;
	}

	90% {
		left: 0;
		top: 0;
	}

	100% {
		left: 0;
		top: 0;
	}
}

#client_shout {
	display: block;
	position: absolute;
	height: 100%;
	width: 100%;
	bottom: 0;
	left: 0;
}

#client_chatcontainer {
	position: absolute;
	width: 100%;
	bottom: 0;
	left: 0;
}

.long {
	width: 100%;
	background-color: #ddd;
	border: 1px solid #555;
	border-style: solid;
	box-sizing: border-box;
	margin: auto;
}

#client_inputbox {
	font-size: 21px;
	padding: 2px 10px;
}

#client_bars {
	position: relative;
	text-align: center;
	display: flex;
	display: -webkit-flex;
}

.emote_button {
	display: inline-block;
	width: 40px;
	height: 40px;
	margin: 2px;
	cursor: pointer;
	box-shadow: 0 0 0 2px #000 inset;
	border-radius: 4px;
	word-break: break-all;
	overflow-y: hidden;
}

.emote_button.dark {
	opacity: 0.5;
}

#client_emo {
	position: relative;
	top: 10px;
	width: 95%;
}

.judge_button {
	display: inline-block;
	min-width: 85px;
	min-height: 42px;
	margin: 5px 1px;
	padding: 2px;
	cursor: pointer;
	text-align: center;
	font-weight: bold;
	font-family: sans-serif;
	text-shadow: -2px 0 #fff, 0 2px #fff, 2px 0 #fff, 0 -2px #fff;
	background-color: #c1c1c1;
	border-radius: 5px;
	border-style: solid;
	border-width: 1px;
	border-color: #919191;
	box-shadow: 1px 1px white inset;
	vertical-align: middle;
}

.healthchange_button {
	font-size: 1.5em;
}

#client_chatlog {
	top: 0;
	right: 0;
	flex: 1;
}

#client_log {
	position: relative;
	height: 100%;
	color: #fff;
	word-break: keep-all;
	word-wrap: break-word;
	overflow-wrap: break-word;
	overflow-y: auto;
	font-size: medium;
	background-color: #242424;
	text-align: start;
	line-height: .85em;
}

#client_log>p {
	line-height: 1.1em;
}

.iclog_name {
	font-weight: bold;
	padding-right: .35em;
}

.iclog_time {
	float: right;
	padding-right: .5em;
	color: #dbdbdb;
}

#client_ooclog {
	position: relative;
	background-color: #242424;
	color: #fff;
	font-family: "Source Code Pro", "Consolas", monospace;
	font-size: small;
	overflow-wrap: break-word;
	overflow-y: auto;
	text-rendering: optimizelegibility;
	resize: none;
	flex: 1 1 auto;
	border: none;
}

#client_oocinput {
	display:flex;
	flex-flow: row nowrap;
	whitespace: nowrap;	
}

#client_oocinputbox {
	flex-grow:1;
}

#OOC_name {
	width:15%;	
}

#client_musicsearch {
	width: 100%;
}

#client_musiclist {
	width: 99%;
	height: 95%;
	height: calc(95% - 16px);
	background-color: #222;
	color: #fff;
}

#client_menu {
	overflow-y: auto;
	height: 100%;
}

.menu_content {
	margin: 15px 15px;
	display: none;
}

.menu_content.active {
	display: block;
}

.menu_button {
	cursor: pointer;
	display: inline-table;
	margin: 10px 15px;
	opacity: 1;
}

.menu_button.active {
	opacity: 0.25;
}

.menu_button:hover {
	color: #FFD081;
}

.menu_icon {
	font-size: 2vw;
}

.area-button {
	border-style: solid;
	min-width: 120px;
	margin: 5px;
	display: inline-block;
	padding: 6px;
	border-radius: 5px;
	border-color: white;
	border-width: 1px;
	cursor: pointer;
	color: #000;
}

.area-button:hover {
	border-color: #FFD081;
}

.area-default {
	background-color: rgb(54, 198, 68);
}

.area-idle {
	background-color: rgb(54, 198, 68);
}

.area-looking-for-players {
	background-color: rgb(255, 255, 0);
}

.area-casing {
	background-color: rgb(255, 166, 0);
}

.area-recess {
	background-color: rgb(255, 190, 30);
}

.area-rp {
	background-color: rgb(200, 52, 252);
}

.area-gaming {
	background-color: rgb(55, 255, 255);
}

.area-locked {
	background-color: rgb(127, 127, 127);
}

.area-spectatable {
	background-color: rgb(54, 198, 68);
}

#bg_preview {
	max-width: 150px;
	max-height: 112px;
	width: 100%;
	height: 100%;
	border-style: double;
	border-radius: 7px;
	border-color: #fff;
	border-width: 3px;
}

#evi_options {
	display: inline-block;
	width: 100%;
	border: 2px ridge white;
}

#evi_options label {
	display: inline-block;
	width: 3em;
}

#evi_desc {
	flex: 1 auto;
}

#client_settings {
	width: 100%;
}

#about-logo {
	padding-top: 5px;
	height: 30%;
	image-rendering: auto;
}

.client_button.hover_button.inactive {
	display: none;
}

.client_button.hover_button:hover {
	border-color: #FFD081;
}

.client_button.dark {
	opacity: 0.5;
}

.hrtext {
	overflow: hidden;
	text-align: center;
	font-size: small;
	color: #c6c6c6;
}

.hrtext:before,
.hrtext:after {
	background-color: #c6c6c6;
	content: "";
	display: inline-block;
	height: 1px;
	position: relative;
	vertical-align: middle;
	width: 50%;
}

.hrtext:before {
	right: 0.5em;
	margin-left: -50%;
}

.hrtext:after {
	left: 0.5em;
	margin-right: -50%;
}

